--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <img src="">
-        <a href="https://virginiafiles.com/show.php?l=0&u=457047&id=38917&tracking_id=">Click offer</a>
+    
+    <div class="main-part">
+       <div class="milla"> <h1>Get a $300 Shopping Voucher!</h1></div>
+        <img src="pic.png">
+        <div class="secend-part">
+        <a href="https://virginiafiles.com/show.php?l=0&u=
+        457047&id=38917&tracking_id=">Click offer</a>
+        </div>
     </div>
     
 </body>
